[package]
name = "legrillon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
fltk = { version = "1.5.4", features = ["fltk-bundled"] }
fltk-theme = "0.7.5"
reqwest = "0.12.12"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["any", "derive", "json", "macros", "sqlite", "chrono", "uuid", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
